@@ -1,6 +1,7 @@
 # Generated by roxygen2 (4.0.2): do not edit by hand
 
 S3method("+",corpus)
+S3method("[",dfm)
 S3method(clean,character)
 S3method(clean,corpus)
 S3method(collocations,character)
@@ -132,6 +133,7 @@ export(wordfishMCMC)
 export(wordstem)
 export(zipfiles)
 import(austin)
+import(ca)
 import(data.table)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(tm,as.TermDocumentMatrix)
